--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Movie App</title>
-  </head>
-  <body>
-    <header>
-      <form id="form">
-        <input type="text" id="search" class="search" placeholder="Search">
-      </form>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Movie Recommendation System</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>🎬 Movie Recommendation System</h1>
+    <form id="form">
+      <input type="text" id="search" class="search" placeholder="Search movies...">
+    </form>
+  </header>
 
-    <main id="main"></main>
+  <main id="main"></main>
 
-    <script src="script.js"></script>
-  </body>
+  <footer>
+    <p>Made with ❤️ for movie lovers</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
 </html>
